<resources>
    <string name="app_name">My Application_5</string>
    <string name="say_something_to_your_self">Say something to yourself!</string>
    <string name="send">send</string>
    <string name="hello_new_user">Hello, new user!</string>
    <string name="please_fill_up_your_name">Please fill up your name:</string>
    <string name="your_name">Your name</string>
    <string name="name">Name</string>
    <string name="this_is_my_name">This is my name</string>
    <string name="skip">Skip</string>
</resources>
